@@ -2,6 +2,15 @@
 
         Reviewed by Lars.
 
+        Use the navigational web actions in the toolbar
+
+        * QtLauncher/main.cpp:
+        (MainWindow::MainWindow):
+
+2007-11-07  Simon Hausmann  <hausmann@kde.org>
+
+        Reviewed by Lars.
+
         Store a bunch of QActions in QWebPagePrivate, corresponding to QWebPage::WebAction.
         Added QWebPageContext to hold context sensitive information (for example used by the context menu).
 
